--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-support-google-services": "1.1.0",
+    "firebase": "^5.8.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "phonegap-plugin-multidex": "1.0.0",
