--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "@ionic-native/background-mode": "^4.20.0",
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/geolocation": "^4.20.0",
+    "@ionic-native/local-notifications": "^4.20.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.4",
     "cordova-plugin-background-mode": "0.7.2",
+    "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.2",
+    "cordova-plugin-local-notification": "0.9.0-beta.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -62,7 +65,8 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
-      "cordova-plugin-background-mode": {}
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
